--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,61 @@
-@import url(
-    'https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'
-);
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-html,
-body {
-   margin: 0;
-   padding: 0;
-}
-
-html body * {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  align-items: center;
+  padding-left: 3rem;
+  padding-right: 3.5rem;
+  background: #D1B48C;
+}
+
+nav .logo-container {
+  height: auto;
+  width: 180px;
+}
+
+nav .logo {
+  height: auto;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  margin-right: 150px;
+  flex-direction: row;
+  gap: 1.5rem;
+  color: #228b22;
+}
+
+nav a {
+  text-decoration: none;
+}
+
+nav .nav-menu-link {
+  color: #F8F5EE;
+}
+
+nav .nav-menu-link:hover {
+  color: #e2e0da;
+}
+
+nav ul {
+  list-style: none;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  gap: 2.5rem;
+  margin: 0;
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
 }
