--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,93 +1,3 @@
-.poppins-thin {
-  font-family: "Poppins", sans-serif;
-  font-weight: 100;
-  font-style: normal;
-}
-
-.poppins-extralight {
-  font-family: "Poppins", sans-serif;
-  font-weight: 200;
-  font-style: normal;
-}
-
-.poppins-light {
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.poppins-regular {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.poppins-medium {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.poppins-semibold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.poppins-bold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.poppins-extrabold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 800;
-  font-style: normal;
-}
-
-.poppins-black {
-  font-family: "Poppins", sans-serif;
-  font-weight: 900;
-  font-style: normal;
-}
-
-.poppins-thin-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 100;
-  font-style: italic;
-}
-
-.poppins-extralight-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 200;
-  font-style: italic;
-}
-
-.poppins-light-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-style: italic;
-}
-
-.poppins-regular-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.poppins-medium-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: italic;
-}
-
-.poppins-semibold-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-style: italic;
-}
-
 :root {
   --color-netral-0: #556B2F;
   --color-netral-10: #228B22;
@@ -96,26 +6,15 @@
   --color-netral-50: #d3f1b6;
 }
 
-* {
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  letter-spacing: 1px;
-}
-
-main {
-  height: 80vh;
-}
-
 footer {
   width: 100;
-  color: var(--color-netral-50);
+  color: white;
 }
 
 #footer_content {
-  background-color: var(--color-netral-0);
+  background-color: #D1B48C;
   padding: 3rem 3.5rem;
+  padding-bottom: 0;
 }
 
 #footer_contacts h1 {
@@ -158,9 +57,9 @@ footer {
 #footer_copyright {
   display: flex;
   justify-content: center;
-  background-color: var(--color-netral-0);
+  background-color: #D1B48C;
   font-size: 0.9rem;
-  padding: 1.5rem;
+  padding: 1rem;
   font-weight: 100;
 }
 
@@ -189,7 +88,7 @@ footer {
 }
 
 .footer_link {
-  color: var(--color-netral-50);
+  color: white;
   font-size: 40px;
 }
 
@@ -198,6 +97,11 @@ footer {
   gap: 10px;
   flex-direction: column-reverse;
   align-items: center;
+}
+
+.footer-list a {
+  text-decoration: none;
+  color: white;
 }
 
 .img {
