--- a/styles/footer.css
+++ b/styles/footer.css
@@ -54,6 +54,10 @@ footer {
   transition: all 0.4s;
 }
 
+#footer_copyright img {
+  margin-bottom: 1rem;
+}
+
 #footer_copyright {
   display: flex;
   justify-content: center;
@@ -61,6 +65,8 @@ footer {
   font-size: 0.9rem;
   padding: 1rem;
   font-weight: 100;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer-list {
@@ -73,8 +79,9 @@ footer {
 
 .footer-text {
   display: grid;
-  grid-template-columns: auto auto auto;
-
+  grid-template-columns: 1fr 1fr;
+  max-width: 60%;
+  margin: 0 auto;
 }
 
 .footer-social-midia {
@@ -104,10 +111,24 @@ footer {
   color: white;
 }
 
+.footer-list span {
+  text-decoration: none;
+  color: white;
+}
+
+.email-footer {
+  display: flex;
+  align-items: center;
+}
+
 .img {
   margin-bottom: 2rem;
 }
 
 .E-mail {
   margin-top: 6px;
+}
+
+#contato-footer {
+  font-size: 1.4rem;
 }
