corrige padding do formulário

--- a/styles/form.css
+++ b/styles/form.css
@@ -48,7 +48,7 @@ section {
   align-items: center;
   justify-content: center;
   width: 80%;
-  padding: 2rem auto;
+  padding: 2rem 0;
 }
 
 form.form-contato {
